# toyllm

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
attention-all-you-need/: transformer.py
gpt-nano/: gpt_nano.ipynb
papers/2017-attention-is-all-you-need/: intuition.md  train_simple.py  train_transformer.py  transformer.py
