[project]
name = "toyllm"
version = "0.1.0"
description = "Toy implementations of popular llms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.12.5",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

fixable = ["ALL"]
unfixable = []
